--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- import axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!--css link-->
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App Project for SheCodes Plus</title>
   </head>
   <body>
-    <h1>test</h1>
+    <h1>Weather App</h1>
+    <!-- link to GitHub -->
+          <footer>
+          <a href="https://github.com/tammiramsey/SheCodesPlusFinalProject" target="_blank"> Open-source code </a>
+          by <a href="https://www.linkedin.com/in/tammi-ramsey-90892426/" target="_blank">Tammi Ramsey</a> </footer>
+    <!--js link-->
     <script src=:"src/app.js"></script> 
   </body>
 </html>
