playing around with formatting

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <div class="weatherApp">
         <form id="city-search-submit-form">
           <div class="row">
-            <div class="col-9">
+            <div class="col-6">
               <!--search bar for new city-->
               <form id="searchBar">
                 <input
                 class="form-control searchCity"
                 id="city-query"
                 type="search"
-                placeholder="Search for a new city..."
+                placeholder="Enter a new city..."
                 />
               </div>
               <!--submit button for new city-->
@@ -49,7 +49,7 @@
                   </div>
                 </div>
                 <!--weather for searched city-->
-                <div class="col-6">
+                <div class="col-3">
                   <div class="weatherBlock">
                     <div id="degreesDescription">
                       <ul>
