updated JS, added images, made some changes to HTML for clarity

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
      <div class=".container-fluid">
-      <div class="weatherApp">
+      <div class="weatherAppWrap">
         <form id="city-search-submit-form">
           <div class="row">
             <div class="col-6">
@@ -55,7 +55,7 @@
                       <ul>
                         <li id="weatherDescription">Partly Sunny</li>
                         <li> <span id="currentTemp">20</span></li>
-                        <a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a>
+                        <a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link" class="active">°F</a>
                       </li>
                       </ul>
                     </div>
