--- a/index.html
+++ b/index.html
@@ -53,18 +53,19 @@
                   <div class="weatherBlock">
                     <div id="degreesDescription">
                       <ul>
-                        <li id="weatherDescription">Partly Sunny</li>
-                        <li> <span id="currentTemp">20</span></li>
+                        <li id="weatherDescription">Partly Cloudy</li>
+                        <li> <span id="currentTemp">20°</span></li>
                         <a href="#" id="celsius-link">°C</a> | <a href="#" id="fahrenheit-link">°F</a>
                       </li>
                       </ul>
                     </div>
-                     <!-- finish putting in partly cloudly image in 
+                    
+                    <!--forecast image-->
                     <img
-                  clcass"partlyCloudy float-none"
-                src="./images/partlyCloudy.png"
-              alt="clipart image of a sun hidden by some clouds"
-            id="weatherMainImage"-->
+                      class"partlyCloudy float-none"
+                      src="./images/partlyCloudy.png"
+                      alt="black and white clipart image of a sun hidden by some clouds"
+                      id="weatherMainImage">
                   </div>
                 </div>
               </div>
