working on adding current date and time to weather app

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <div class="cityBlock">
                     <h1 id="selectedCity">Washington, D.C.</h1>
                     <ul>
-                      <li id="current-date-time">Tue, March 15, 2022</li>
+                      <li id="current-date-time"></li>
                       <li>max <span id="maxTemp">22</span>°C</li>
                       <li>min <span id="minTemp">6</span>°C</li>
                       <li>humidity <span id="humidity">0</span>%</li>
