corrected error on html page, included weather forecast, API for city coords, updated user submission display, and default city info

--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
           by <a href="https://www.linkedin.com/in/tammi-ramsey-90892426/" target="_blank">Tammi Ramsey</a> </footer>
        </div>
           <!--js link-->
-    <script src=:"src/app.js"></script> 
+    <script src="src/app.js"></script> 
   </body>
 </html>
