added the forecast HTML & CSS

--- a/index.html
+++ b/index.html
@@ -79,8 +79,29 @@
                 </button>
                 </div>
    <!--forecast-->
+              
               <div class="weather-forecast" id="forecast">
                 Forecast 
+                 <div class="row">
+                <div class="col-2">
+                  <div class="future-forcast-day"></div>
+                  Thu
+                  </div>
+                  <img src="./images/sun.png"
+                  id="future-forecast-img"
+                  />
+                  <div class="future-forecast-temp">
+                    <span class="future-forecast-temp-max">
+                      18 
+                    </span>
+                  | 
+                  <span class="future-forecast-temp-min">
+                    12
+                  </span>
+                  </div>
+                </div>
+                </div>
+                </div>
               </div>
             </div>
          
