--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                      Current Location
                 </button>
                 </div>
-   <!--forecast-->
+   <!--5 day forecast-->
               
               <div class="weather-forecast" id="forecast">
                 Forecast 
                  <div class="row">
-                <div class="col-2">
+                <div class="col-2 text-center">
                   <div class="future-forcast-day"></div>
                   Thu
                   </div>
@@ -92,11 +92,11 @@
                   />
                   <div class="future-forecast-temp">
                     <span class="future-forecast-temp-max">
-                      18 
+                      18° 
                     </span>
                   | 
                   <span class="future-forecast-temp-min">
-                    12
+                    12°
                   </span>
                   </div>
                 </div>
