--- a/index.html
+++ b/index.html
@@ -80,26 +80,23 @@
                 </div>
    <!--5 day forecast-->
               
-              <div class="weather-forecast" id="forecast">
-                Forecast 
-                 <div class="row">
-                <div class="col-2 text-center">
-                  <div class="future-forcast-day"></div>
-                  Thu
-                  </div>
-                  <img src="./images/sun.png"
+              <div class="col-2 text-center">
+                <div class="future-forcast-day">
+                    Thu
+                </div>
+                 <img src="./images/sun.png"
                   id="future-forecast-img"
-                  />
-                  <div class="future-forecast-temp">
-                    <span class="future-forecast-temp-max">
-                      18° 
-                    </span>
+                 />
+                <div class="future-forecast-temp">
+                   <span class="future-forecast-temp-max">
+                    18º
+                  </span>
                   | 
                   <span class="future-forecast-temp-min">
-                    12°
-                  </span>
+                    12º
+                   </span>
                   </div>
-                </div>
+                  </div>
                 </div>
                 </div>
               </div>
