--- a/index.html
+++ b/index.html
@@ -83,7 +83,42 @@
               </div>
             </div>
      <!--5 day forecast-->     
-    
+ <div class="col-2 text-center">
+                <div class="future-forcast-day">
+              <div class="weather-future-forecast" id="future-forecast">
+                <div class="col-2 text-center">
+                  <div class="future-forcast-day">
+                    Thu
+                </div>
+                 <img src="./images/sun.png"
+                  id="future-forecast-img"
+                 />
+                <div class="future-forecast-temp">
+                  </div>
+                    <img src="./images/sun.png"
+                   id="future-forecast-img"
+                    />
+                  <div class="future-forecast-temp">
+                   <span class="future-forecast-temp-max">
+                    18º
+                  </span>
+                  | 
+                  <span class="future-forecast-temp-min">
+                    12º
+                   </span>
+                    </span>
+                      | 
+                    <span class="future-forecast-temp-min">
+                      12º
+                    </span>
+                  </div>
+                  </div>
+                </div>
+                </div>
+                </div>
+              </div>
+            </div>
+            
     <!-- link to GitHub -->
           <footer>
           <a href="https://github.com/tammiramsey/SheCodesPlusFinalProject" target="_blank"> Open-source code </a>
