--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                   <li id="weatherDescription">Partly Cloudy</li>
                   <li>
                     <span id="currentTemp">20°</span>
-                    <a href="#" id="celsius-link">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a>
+                    <!--<a href="#" id="celsius-link">-->
+                    °C
+                    <!--</a> |-->
+                    <!--<a href="#" id="fahrenheit-link">°F</a>-->
                   </li>
                 </ul>
               </div>
